--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <!-- Travel Hanging Bag -->
           <article>
             <span class="image">
-              <img src="images/travel-hanging-bag.jpg" alt="Travel Hanging Bag">
+              <img src="https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760731324/ChatGPT_Image_Oct_17_2025_11_01_50_PM_wylfsi.png" alt="Travel Hanging Bag">
             </span>
             <a href="travel-hanging-bag.html">
               <h2>TRAVEL HANGING BAG</h2>
@@ -494,4 +494,5 @@
   </script>
 </body>
 </html>
+
 
