--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <!-- Bathrobe -->
           <article>
             <span class="image">
-              <img src="images/bathrobe.jpg" alt="Bathrobe">
+              <img src="https://res.cloudinary.com/dkk8ohmu7/image/upload/v1760734870/ChatGPT_Image_Oct_18_2025_12_00_59_AM_wcsexe.png" alt="Bathrobe">
             </span>
             <a href="bathrobe.html">
               <h2>BATHROBE</h2>
@@ -494,5 +494,6 @@
   </script>
 </body>
 </html>
+
 
 
